[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py_btree_engine"
version = "1.0.0"
description = "A relational database engine built from scratch in Python"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
py_btree_engine = "src.repl:main"
